update url erro

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<div class="music-player">
 						<div class="music-player-lp">
 							<div class="lp-inner-circle" style=" background-color: #f14617;">
-								<a href="http://www.w3cfuns.com/notes/17942/1be90cf8e1587fb64cb69cb696554c74.html" target="_blank">
+								<a href="https://www.qdfuns.com/article/17942/1be90cf8e1587fb64cb69cb696554c74.html" target="_blank">
 									<span class="title">canvas画布之海底泡泡<span class="tip">canvas</span></span>
 									<span class="time">2016年8月29日</span>
 								</a>
@@ -49,7 +49,7 @@
 					<div class="music-player">
 						<div class="music-player-lp">
 							<div class="lp-inner-circle" style=" background-color: #95a1b4;">
-								<a href="http://www.w3cfuns.com/notes/17942/c6feb528d5cea0b68e3b82139f5ca2c0.html" target="_blank">
+								<a href="https://www.qdfuns.com/article/17942/c6feb528d5cea0b68e3b82139f5ca2c0.html" target="_blank">
 									<span class="title">canvas画布之视屏点击爆破学习<span class="tip">canvas</span></span>
 									<span class="time">2016年4月24日</span>
 								</a>
@@ -65,7 +65,7 @@
 					<div class="music-player">
 						<div class="music-player-lp white-poster">
 							<div class="lp-inner-circle" style=" background-color: #ffcc00;" >
-								<a href="http://www.w3cfuns.com/notes/17942/55bd38d67403a143e871588f061cb352.html" target="_blank">
+								<a href="https://www.qdfuns.com/article/17942/55bd38d67403a143e871588f061cb352.html" target="_blank">
 									<span class="title">学习用纯CSS做一个旋转魔方<span class="tip">CSS</span></span>
 									<span class="time">2016年3月09日</span>
 								</a>
@@ -81,7 +81,7 @@
 					<div class="music-player">
 						<div class="music-player-lp white-poster">
 							<div class="lp-inner-circle" style=" background-color: #cab1e2;">
-								<a href="http://www.tofei.cc/comments/2_cavas_word/" target="_blank">
+								<a href="comments/2_cavas_word/" target="_blank">
 									<span class="title">canvas画布之给你一封信<span class="tip">canvas</span></span>
 									<span class="time">2016年2月12日</span>
 								</a>
@@ -97,7 +97,7 @@
 					<div class="music-player">
 						<div class="music-player-lp">
 							<div class="lp-inner-circle"  style=" background-color: #2691c9;" >
-								<a href="http://www.tofei.cc/comments/3_sheep_game/" target="_blank">
+								<a href="comments/3_sheep_game/" target="_blank">
 									<span class="title">奔跑吧！小羊羊<span class="tip">JSAnimation</span></span>
 									<span class="time">2016年2月12日</span>
 								</a>
@@ -113,7 +113,7 @@
 					<div class="music-player">
 						<div class="music-player-lp">
 							<div class="lp-inner-circle"  style=" background-color: #cab1e2;" >
-								<a href="http://www.tofei.cc/comments/5_Fireworks/" target="_blank">
+								<a href="comments/5_Fireworks/" target="_blank">
 									<span class="title">过年我们一起放烟花吧！<span class="tip">CSS</span></span>
 									<span class="time">2016年3月7日</span>
 								</a>
@@ -177,7 +177,7 @@
 					<div class="music-player">
 						<div class="music-player-lp">
 							<div class="lp-inner-circle"  style=" background-color: #cab1e2;" >
-								<a href="http://www.tofei.cc/comments/9_wechatSTJ/wechat_1.0" target="_blank">
+								<a href="comments/9_wechatSTJ/wechat_1.0" target="_blank">
 									<span class="title">社团+微信版1.0<span class="tip">seaJs</span></span>
 									<span class="time">2016年3月1日</span>
 								</a>
@@ -193,7 +193,7 @@
 					<div class="music-player">
 						<div class="music-player-lp white-poster">
 							<div class="lp-inner-circle"  style=" background-color: #f19850;" >
-								<a href="http://www.tofei.cc/comments/12_PcYY/html/" target="_blank">
+								<a href="comments/12_PcYY/html/" target="_blank">
 									<span class="title">社团+之运营后台<span class="tip">HTML</span></span>
 									<span class="time">2016年5月1日</span>
 								</a>
@@ -304,7 +304,7 @@
 			</div>
 			<div id="poster-overview">
 				<div class="poster-overview-item">
-					<a href="http://www.w3cfuns.com/notes/17942/1be90cf8e1587fb64cb69cb696554c74.html" target="_blank">
+					<a href="https://www.qdfuns.com/article/17942/1be90cf8e1587fb64cb69cb696554c74.html" target="_blank">
 						<img src="index/img/bigFish.png" alt="">
 						<div class="poster-hover-bg"></div>
 						<div class="poster-title">canvas画布之海底泡泡</div>
@@ -312,7 +312,7 @@
 					</a>
 				</div>
 				<div class="poster-overview-item">
-					<a href="http://www.w3cfuns.com/notes/17942/c6feb528d5cea0b68e3b82139f5ca2c0.html" target="_blank">
+					<a href="https://www.qdfuns.com/article/17942/c6feb528d5cea0b68e3b82139f5ca2c0.html" target="_blank">
 						<img src="index/img/BlowVido.png" alt="">
 						<div class="poster-hover-bg"></div>
 						<div class="poster-title">canvas画布之视屏点击爆破学习</div>
@@ -320,7 +320,7 @@
 					</a>
 				</div>
 				<div class="poster-overview-item">
-					<a href="http://www.w3cfuns.com/notes/17942/55bd38d67403a143e871588f061cb352.html" target="_blank">
+					<a href="https://www.qdfuns.com/article/17942/55bd38d67403a143e871588f061cb352.html" target="_blank">
 						<img src="index/img/rabit's-cube.png" alt="">
 						<div class="poster-hover-bg"></div>
 						<div class="poster-title">学习用纯CSS做一个旋转魔方</div>
@@ -328,7 +328,7 @@
 					</a>
 				</div>
 				<div class="poster-overview-item">
-					<a href="http://www.tofei.cc/comments/2_cavas_word/" target="_blank">
+					<a href="comments/2_cavas_word/" target="_blank">
 						<img src="index/img/wordMusic.png" alt="">
 						<div class="poster-hover-bg"></div>
 						<div class="poster-title">canvas画布之给你一封信</div>
@@ -336,7 +336,7 @@
 					</a>
 				</div>
 				<div class="poster-overview-item">
-					<a href="http://www.tofei.cc/comments/3_sheep_game/" target="_blank">
+					<a href="comments/3_sheep_game/" target="_blank">
 						<img src="index/img/sheep.png" alt="">
 						<div class="poster-hover-bg"></div>
 						<div class="poster-title">奔跑吧！小羊羊</div>
@@ -344,7 +344,7 @@
 					</a>
 				</div>
 				<div class="poster-overview-item">
-					<a href="http://www.tofei.cc/comments/5_Fireworks/" target="_blank">
+					<a href="comments/5_Fireworks/" target="_blank">
 						<img src="index/img/Fireworks.png" alt="">
 						<div class="poster-hover-bg"></div>
 						<div class="poster-title">过年我们一起放烟花吧！</div>
@@ -376,7 +376,7 @@
 					</a>
 				</div>
 				<div class="poster-overview-item">
-					<a href="http://www.tofei.cc/comments/9_wechatSTJ/wechat_1.0" target="_blank">
+					<a href="comments/9_wechatSTJ/wechat_1.0" target="_blank">
 						<img src="index/img/wechat1.0.png" alt="">
 						<div class="poster-hover-bg"></div>
 						<div class="poster-title">社团+微信版1.0</div>
@@ -384,7 +384,7 @@
 					</a>
 				</div>
 				<div class="poster-overview-item">
-					<a href="http://www.tofei.cc/comments/12_PcYY/html/" target="_blank">
+					<a href="comments/12_PcYY/html/" target="_blank">
 						<img src="index/img/stjia_yy.png" alt="">
 						<div class="poster-hover-bg"></div>
 						<div class="poster-title">社团+之运营后台</div>
