change tofei tp tuffy

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viwport" content="width=device-width,initial-scale=1.0">
-	<title>Tofei | 前端.就是学新的知识做新的东西，做菜就是很好吃所以学着做</title>
-	<meta name="description" content="Tofei既要做一个程序猿，又想做好一个厨子。">
+	<title>Tuffy | 前端.就是学新的知识做新的东西，做菜就是很好吃所以学着做</title>
+	<meta name="description" content="Tuffy既要做一个程序猿，又想做好一个厨子。">
 	<link rel="stylesheet" href="index/css/main.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
 		<div class="panel">
 			<div id="content">
 				<div class="welcome">
-					<p>这是Tofei展示平时coding、cooking、photo的网站...</p>
+					<p>这是Tuffy展示平时coding、cooking、photo的网站...</p>
 					<p>浏览提示：点击、拖拽、滚动...</p>
 					<p>好的，就这样...</p>
 				</div>
@@ -281,7 +281,7 @@
 						THANKS TO<br>
 						<a href="http://blok.im/">Block</a><br><br><br>
 						WEBSITE BY<br>
-						Tofei(LiuGuiLian)
+						Tuffy(LiuGuiLian)
 					</div>
 					<div class="bolck">
 						GRADUATE<br>
@@ -297,7 +297,7 @@
 					</div>
 				</div>
 				<div class="nav-impressum">
-					Tofei, Huaqiao University, ShenZhen<br><br>
+					Tuffy, Huaqiao University, ShenZhen<br><br>
 					看看我最近在做什么...<br><br>
 					Coding | Cooking | Photo<br>
 				</div>
@@ -431,7 +431,7 @@
 	</div>
 	<div id="preloader">
 		<div class="preloader-bar"></div>
-		<img src="index/img/Tofei.png" alt="">
+		<img src="index/img/Tuffy.png" alt="">
 	</div>
 	<script src="index/js/jquery-3.1.0.min.js"></script>
 	<script src="index/js/main.js"></script>
