--- a/data/blogs/atom_plugin.html
+++ b/data/blogs/atom_plugin.html
@@ -4,6 +4,11 @@
     </p>
 </section>
 <section>
-    <p><a href="https://segmentfault.com/a/1190000014322520">如何从0开发一个Atom组件</a></p>
-    <p><a href="https://zhuanlan.zhihu.com/p/27913291">如何开发一个 Atom 插件</a></p>
+
+</section>
+<section>
+    <P>参考资料如下：</P>
+    <p><a target="_blank" href="https://segmentfault.com/a/1190000014322520"  rel="noopener noreferrer">如何从0开发一个Atom组件</a></p>
+    <p><a target="_blank" href="https://zhuanlan.zhihu.com/p/27913291"  rel="noopener noreferrer">如何开发一个 Atom 插件</a></p>
+
 </section>
