--- a/data/blogs/xingfu.html
+++ b/data/blogs/xingfu.html
@@ -6,6 +6,23 @@
     </h1>
 </a>
 <br />
+<h1 id="XXY">小象屿小程序</h1>
+<br />
+<h3>职务</h3>
+<p>项目负责人 + 前端负责人</p>
+<h3>介绍</h3>
+<p>一个给妈妈们提供交流的社区小程序和后台管理系统，具备提问/回答/投票等基础的社区功能</p>
+<h3>框架</h3>
+<p>小程序原生 + vant部分引入</p>
+<h3>界面</h3>
+<video controls="controls" loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/xiaoxiangyu.MP4">
+    Your browser does not support the video tag.
+</video>
+<h3>地址</h3>
+<p>使用微信扫描下面的二维码，访问小程序</p>
+<img style="width: 260px;" src="https://img.imgdb.cn/item/604a293d5aedab222c42d781.jpg" alt="" />
+
+<br />
 <h1 id="AM">焦虑妈妈训练营平台项目</h1>
 <br />
 <section>
@@ -32,7 +49,7 @@
         <li>Chrome插件</li>
     </ul>
     <h3>界面</h3>
-    <video loop="loop" style="width:100%;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/chorme.mov">
+    <video controls="controls" loop="loop" style="width:100%;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/chorme.mov">
         Your browser does not support the video tag.
     </video>
     <h3>下载地址</h3>
@@ -59,7 +76,7 @@
         <li>text-to-svg 用于将文字转化成图片</li>
     </ul>
     <h3>界面</h3>
-    <video loop="loop" style="width:100%; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/Electron.mov">
+    <video controls="controls" loop="loop" style="width:100%; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/Electron.mov">
         Your browser does not support the video tag.
     </video>
     <h3>下载地址</h3>
@@ -87,7 +104,7 @@
         <li>scss</li>
     </ul>
     <h3>界面</h3>
-    <video loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/camp.mp4">
+    <video controls="controls" loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/camp.mp4">
         Your browser does not support the video tag.
     </video>
 
@@ -115,7 +132,7 @@
         <li>vant</li>
     </ul>
     <h3>界面</h3>
-    <video loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/bb.mp4">
+    <video controls="controls" loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/bb.mp4">
         Your browser does not support the video tag.
     </video>
     <h3>地址</h3>
@@ -144,7 +161,7 @@
         <li>小程序</li>
     </ul>
     <h3>界面</h3>
-    <video loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/mini.mp4">
+    <video controls="controls" loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/mini.mp4">
         Your browser does not support the video tag.
     </video>
     <h3>地址</h3>
@@ -173,7 +190,7 @@
         <li>scss</li>
     </ul>
     <h3>界面</h3>
-    <video loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/web.mp4">
+    <video controls="controls" loop="loop" muted="true" style="width:300px; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/web.mp4">
         Your browser does not support the video tag.
     </video>
     <h3>地址</h3>
@@ -204,7 +221,7 @@
         <li>element-ui</li>
     </ul>
     <h3>界面</h3>
-    <video loop="loop" muted="true" style="width:100%; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/admin.mov">
+    <video controls="controls" loop="loop" muted="true" style="width:100%; border: 1px solid #efefef;" autoplay="autoplay" src="https://demo.xfwings.com.cn/h5/camp_bb_dev/dist/video/admin.mov">
         Your browser does not support the video tag.
     </video>
     
